--- a/src/App.css
+++ b/src/App.css
@@ -215,6 +215,11 @@ body{
 	flex-direction: column;
 	align-items: center;
 }
+.update_form > form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
 .btn{
 	border: 2px solid blue;
     background: blue;
@@ -263,3 +268,19 @@ li{
   list-style: none;
 }
 
+.form-group{
+	display: flex;
+	gap: 2em;
+	margin-bottom: 1em;
+	width: 600px;
+}
+
+.form-group > label {
+	min-width: 200px;
+	font-weight: 600;
+	letter-spacing: 1px;	
+}
+
+.form-group > input {
+	width: 400px;
+}
