--- a/src/App.css
+++ b/src/App.css
@@ -216,9 +216,10 @@ body{
 	align-items: center;
 }
 .update_form > form {
-	display: flex;
+	/* display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: center; */
+	width: 100%;
 }
 .btn{
 	border: 2px solid blue;
@@ -268,6 +269,18 @@ li{
   list-style: none;
 }
 
+.form-container{
+	/* border: 1px solid red; */
+	width: 100%;
+	padding: 2em 4em;
+	display: flex;
+}
+
+.form-container > div{
+	/* border: 1px solid blue; */
+	width: 100%;
+}
+
 .form-group{
 	display: flex;
 	gap: 2em;
@@ -283,4 +296,29 @@ li{
 
 .form-group > input {
 	width: 400px;
+}
+
+.dropdown-item{
+	font-size: 1em;
+}
+
+.calender-wrapper{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	gap: 1em
+}
+
+.slotCalenderDay {
+    position: relative;
+    border-radius: 5px;
+    background-color: red;
+    overflow: visible !important;
+}
+
+.slotCalenderDay:hover {
+    .count-badge{
+		display: block;
+	}
 }
